--- a/_sass/bare-necessities/envsash.sass
+++ b/_sass/bare-necessities/envsash.sass
@@ -1,4 +1,5 @@
 .envsash 
+     font-family: "Lucida Grande", sans-serif
      width: 200px
      height: 30px
      right: -6px
@@ -27,7 +28,6 @@
      transform: rotate(-45deg)
      background: linear-gradient(#e40000, #9e0000)
      color: #fff
-     font-family: 'Source Serif 4'
      font-size: 14px
      border: 1px #fff dashed
      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5)
