--- a/_sass/bare-necessities/main.sass
+++ b/_sass/bare-necessities/main.sass
@@ -1,5 +1,15 @@
 @import "bare-necessities/envsash"
+@import "bare-necessities/nav"
 
-/*body*/
-	/*font-family: "Lucida Grande", sans-serif*/
+body
+	background: #fff
+	font-family: "Lucida Grande", sans-serif
 
+.content
+	display: flex
+	flex-direction: row
+	max-width: 900px
+	margin: auto
+	
+a
+	color: #00beff
